# nonlinear_dynamics

./: .gitignore  CHANGELOG.md  LICENSE  Manifest.toml  Project.toml  README.md  nonlinear-dynamics.cabal  pyproject.toml
lib/: NonlinearDynamics.hs
lib/FlowsOnTheLine/: Plots.hs
src/ch02/: 2_2_1.jl  2_2_1graph.jl  2_2_1vecfield.jl  2_2_2.jl  2_2_2ode.jl  2_2_2vecfield.jl  2_2_3.jl  2_2_3vecfield.jl  2_2_4.jl  2_2_4vecfield.jl  2_2_5.jl  2_2_5graph.jl  2_2_5vecfield.jl  2_2_6.jl  2_2_6vecfield.jl
src/nonlinear_dynamics/: main.py  plotting_utils.py
src/nonlinear_dynamics/ch02/: __init__.py  ex2_2_1.py  ex2_2_2.py  ex2_2_3.py  ex2_2_4.py  ex2_2_5.py  ex2_2_6.py  ex2_2_7.py  ex2_2_8.py  ex2_2_9.py
tex/: .gitignore  nonlinear_dynamics.out  nonlinear_dynamics.tex
tex/ch02/: sections.tex
tex/ch02/sections/: 2_1.tex  2_2.tex
tex/ch02/sections/exercises/: 2_1_1.tex  2_1_2.tex  2_1_3.tex  2_1_4.tex  2_1_5.tex  2_2_1.tex  2_2_10.tex  2_2_2.tex  2_2_3.tex  2_2_4.tex  2_2_5.tex  2_2_6.tex  2_2_7.tex  2_2_8.tex  2_2_9.tex
